src/test/ui/proc-macro/disappearing-resolution.stderr
error: cannot find attribute `empty_helper` in this scope
  --> $DIR/disappearing-resolution.rs:18:3
   |
LL | #[empty_helper]
   |   ^^^^^^^^^^^^

error[E0603]: derive macro import `Empty` is private
  --> $DIR/disappearing-resolution.rs:11:8
   |
LL | use m::Empty;
   |        ^^^^^ private derive macro import
   |
note: the derive macro import `Empty` is defined here
  --> $DIR/disappearing-resolution.rs:9:9
   |
LL |     use test_macros::Empty;
   |         ^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0603`.
